Добавлена поддержка бд

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -80,7 +80,7 @@
                                  maxlength="5" autocomplete="off" a:placeholder="Число от -3 до 3..."
                                  value="#{resultList.result.y}" type="number" required="true" requiredMessage="Поле Y должно быть заполнено">
 <!--                        <f:validateRequired/>-->
-                        <f:validateDoubleRange minimum="-3" maximum="3" validatorMessage="уээээ"/>
+                        <f:validateDoubleRange minimum="-3" maximum="3"/>
                     </h:inputText>
                 </div>
 
